# WebGpuTemplate

./: CMakeLists.txt  application.cpp  application.h  main.cpp  webgpu-utils.cpp  webgpu-utils.h
